52) ralink_spi.c Fix sanity checks on rw.<br>
53) goahead code cleanup.<br>
54) Filter all unused CONFIGS options from kernel config on create images. Is speed up boot and save mem.<br>
55) More usb support fixes and optiomizations.<br>
56) Site Survey Access Point Graphical Diagram.<br>

1.8.x
1) Sync from 3.5.0.0 SDK.<br>
2) Update Uboot code.<br>
3) More base support RT5330 and full support RT33**.<br>
4) Fix watchdog, rdm, usb drivers.<br>
5) HTB fix rate select.<br>
6) busybox version up to 1.18.5.<br>
7) Add usb_modeswitch.<br>
8) udpxy up to 1.0-20 version.<br>
9) Update squashfs to version 3.4 stable tree.<br>
10) Some mips fixes backported.<br>
11) Some usb fixes backported.<br>
12) Speed up writeback of big dirty files.<br>
13) Fix support RT3352 in libnvram and some nvram variables remove.<br>
14) Driver core: check return code of sysfs_create_link.<br>
15) Tune inetd options for more safe.<br>
16) Always allocate at least 16 skb frags regardless of page size for speedup.<br>
17) Some init scripts optimize for speedup and more secure.<br>
18) Some skb, net, rcu subsystems optimize.<br>
19) Optimize VPN helpers for more readable and correct logic in STA mode.<br>
20) More settings now apply without reboot device.<br>
21) Decrease logic itaration overhead.<br>
22) Up miniupnpd to 1.5.20110623 version.<br>
23) Update libnatpmp to 20110103 version.<br>
24) MIMO Power Save Mode set to static scheme.<br>
25) Int High Power mode disable MIMO PowerSave to.<br>
26) Add device autoprobe support in kernel.<br>
27) Cleanup nvram fields.<br>

<br><br>
<b>For support see:</b><br>
<a href="http://acorp.ru">acorp.ru - Acorp Electronics Inc.</a><br>
<a href="http://ddixlab.ru">ddixlab.ru - Laboratory of built in systems.
</a><br>
<br><br>
<b>News and changes in Russian:</b><br>
<a href="http://sadnet.ru">sadnet.ru - Development opensource routers firmware</a><br>
<br><br>
<b>Bug report please send sfstudio[at]mail.ru</b>
<br>
<br>
<br>