@@ -59,10 +59,14 @@ echo "==================START-L2TP-CLIENT======================="
     reachable=0;
 
     $LOG "Set route to vpn server."
-    if [ -f /tmp/default.gw ]; then
-	newdgw=`cat /tmp/default.gw`
+    if [ "$wanmode" != "STATIC" ]; then
+	if [ -f /tmp/default.gw ]; then
+	    newdgw=`cat /tmp/default.gw`
+	else
+	    newdgw=""
+	fi
     else
-	newdgw=""
+	    newdgw=`nvram_get 2860 wan_gateway`
     fi
 
     if [ "$newdgw" != "" ] && [ "$newdgw" != "$SERVER" ]; then
